--- a/Python final project DONE.ipynb
+++ b/Python final project DONE.ipynb
@@ -441,6 +441,9 @@
     "#Read the csv file\n",
     "flnkr = pd.read_csv(r'C:\\Users\\natal\\OneDrive\\שולחן העבודה\\Python course\\Final Project\\flanker_data\\P1Flanker1.csv')\n",
     "\n",
+    "# Using describe() to show the mean accuracy across the task\n",
+    "fknkr.describe()\n",
+    "\n",
     "# Group by the correct column to see the mean RT in correct\\incorrect responses\n",
     "flnkr.groupby('Correct')['ReactionTime'].describe()\n",
     "\n",
